B&L QA/objects/Contract_Account_Relationship__c.object
<CustomObject>
    <description>Junction object for many-to-many relationship between Contracts and Accounts. EMEASU.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account the contract is related to. EMEASU.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract/Account Relationships</relationshipLabel>
        <relationshipName>Contract_Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_ID__c</fullName>
        <description>EMEASU</description>
        <formula>Account__r.Bill_To__c</formula>
        <label>Bill To ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract the account is related to. EMEASU.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract/Account Relationships</relationshipLabel>
        <relationshipName>Contract_Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract/Account Relationship</label>
    <nameField>
        <displayFormat>CAR-{00000000}</displayFormat>
        <label>Contract/Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract/Account Relationships</pluralLabel>
    <recordTypes>
        <fullName>EMEASU_Contract_Account_Relationship</fullName>
        <active>true</active>
        <description>EMEASU RT</description>
        <label>EMEASU Contract/Account Relationship</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>